<resources>
    <string name="app_name">geo_app</string>
    <string name="project_button">Projekty</string>
    <string name="quick_navigate">Szybka nawigacja</string>
    <string name="quick_calculations">Szybkie obliczenia</string>
    <string name="settings">Ustawienia</string>
    <string name="help">Pomoc</string>

    <string name="empty_project">Stwórz pusty projekt</string>
    <string name="import_from_cgeo">Otwórz projekt C-GEO</string>
    <string name="project_list">Lista projektów</string>

    <string name="map">Mapa</string>
    <string name="points">Punkty</string>
    <string name="calculations">Obliczenia</string>



</resources>
